# veris

./: .gitignore  Cargo.toml  README.md  clippy.toml  gen-verusdoc.sh  opendp.sh  ub.rs
.github/: workflow.yml
.github/workflows/: main.yml  pages.yml
alerus/: Cargo.toml  proph_paradox.rs
attic/: ub_old.rs
lean_proofs/: ExpTaylor.lean  README.md  lake-manifest.json  lakefile.toml
lean_proofs/ExpTaylor/: Basic.lean
random/: Cargo.toml
random/src/: lib.rs  main.rs
ub/: Cargo.toml  alias.rs  extern_spec.rs  fdr.rs  fldr.rs  fldr_helper.rs  geo.rs  geo_dist.rs  ho_rej_samp.rs  lib.rs  math.rs  mod.rs  pure_fact.rs  rand_primitives.rs  random_walk.rs  ub.rs  verify.sh
ub/discrete_laplace/: bernoulli_exp.rs  bernoulli_exp1.rs  bernoulli_rational.rs  discrete_gaussian.rs  discrete_laplace.rs  exp_rejection.rs  geometric_exp.rs  geometric_exp_fast.rs  mod.rs
ub/dp/: mod.rs  mult_credit.rs  num_d.rs  num_sparse_vector.rs  smart_sum.rs  sparse_vector.rs
ub/math/: exp.rs  mod.rs  pow.rs  series.rs
ub/src/: main.rs
veris/: alias.rs  extern_spec.rs  fdr.rs  fldr.rs  geo.rs  geo_dist.rs  ho_rej_samp.rs  lib.rs  proph_paradox.rs  proph_paradox_mutref.rs  random_walk.rs  spline.rs
veris/cks/: bernoulli_exp.rs  bernoulli_exp1.rs  bernoulli_rational.rs  discrete_gaussian.rs  discrete_laplace.rs  exp_rejection.rs  geometric_exp.rs  geometric_exp_fast.rs  mod.rs
veris/dp/: mod.rs  mult_credit.rs  num_d.rs  num_sparse_vector.rs
veris/math/: exp.rs  pow.rs  series.rs
veris/src/: main.rs
